Changed bestbot.ini a bit

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -1,5 +1,5 @@
-// The default configuration file for BestBot
-// Add your settings here or it will not work!
+The default configuration file for BestBot
+Add your settings here or it will not work!
 
 [irc]
 name =
