The bot will now only report RCON if the user has the ADMIN, MODERATOR, or RCON type. By default, RCON reporting is disabled (this can be changed in the .ini) Added userLevel to the server object. Eventually, we will restrict which servers can or can not be killed by moderators or admins.

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -27,6 +27,10 @@ cfgdir =
 serializationbackupdir =
 serializationfile =
 verbose =
+logfiledir =
 banlistdir =
 adminlistdir =
 whitelistdir =
+
+; True or false, moderators, admins, and RCON users will get RCON regardless
+public_rcon = FALSE
