Made configuration file more verbose

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -27,6 +27,8 @@ cfgdir =
 serializationbackupdir =
 serializationfile =
 verbose =
+
+; Make sure to leave the trailing slash for these options
 logfiledir =
 banlistdir =
 adminlistdir =
