Made database initialization possible, updated destruction methods with linked list removal, updated ini for hostname prefix

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -28,6 +28,7 @@ cfgdir =
 serializationbackupdir =
 serializationfile =
 verbose =
+hostname_base =
 
 ; Make sure to leave the trailing slash for these options
 logfiledir =
