Added support for custom help message

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -34,6 +34,7 @@ serializationbackupdir =
 serializationfile =
 verbose =
 hostname_base =
+help =
 
 ; Make sure to leave the trailing slash for these options
 logfiledir =
