Update to: - PircBotX 1.9 - TCP seperate IRC/Hoster protocol

--- a/bestbot.ini
+++ b/bestbot.ini
@@ -1,41 +1,158 @@
-; This is the default configuration file for BestBot
+; Best bot config
 
-[irc]
-name =
-user =
-version =
-pass =
-network =
-channel =
-port =
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[global]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[mysql]
-host =
-user =
-pass =
-db =
-port =
-
-[bot]
-min_port =
-max_port =
-directory =
-executable =
+; String: Name of the log file to be written to
 logfile =
-iwaddir =
-waddir =
-cfgdir =
-serializationbackupdir =
-serializationfile =
+
+; String: The password that will be used to connect between the irc/hoster,
+;         which should be the same on both ends
+bestbotpassword =
+
+
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[irc]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+; String: The IRC name of the bot
+name =
+
+; String: The authorization name of the bot
+user =
+
+; String: The version of the bot (Is this a string?)
+version =
+
+; String: The password for the bot on IRC
+pass =
+
+; String: The network to connect to
+network =
+
+; String: The default channel to listen for commands in
+channel =
+
+; Int: The port to connect to the network with
+port =
+
+; Boolean: Will tell the program to dump text data to the console if true
 verbose =
-hostname_base =
+
+
+
+
+; String: Remote hoster IP name
+server_ip =
+
+; Int: Remote hoster port
+server_port =
+
+
+
+
+; String: Help messages if someone requests help in the main channel
 help =
 
-; Make sure to leave the trailing slash for these options
-logfiledir =
-banlistdir =
-adminlistdir =
-whitelistdir =
+; String: The token is a prefix that indicates to the bot of a command
+;         Ex: If the token is '.' then a command would look like .host
+token =
 
-; True or false, moderators, admins, and RCON users will get RCON regardless
-public_rcon = FALSE
+
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+[server]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+; Int: The port to listen on for incoming IRC client connections 
+listening_port =
+
+; Int: The port base to start hosting from
+hosting_base_port =
+
+; Int: The number of servers to host at maximum
+hosting_max_servers =
+
+; String: The message to be delivered to the server in regular intervals
+notice_message =
+
+; Int: The amount of minutes between each message, unusual numbers default to 60
+notice_interval_minutes =
+
+
+
+
+; String (list): A list of files that will always be included in each wad
+extra_wads =
+
+; String: The base hostname to be applied to all servers
+hostname_base =
+
+; Boolean: If rcon is allowed to be retrieved by the public
+public_rcon =
+
+
+
+
+; String: MySQL hostname
+mysql_host =
+
+; String: MySQL username
+mysql_user =
+
+; String: MySQL password
+mysql_pass =
+
+; String: MySQL database name
+mysql_db =
+
+; Int: MySQL port number
+mysql_port =
+
+
+
+
+; NOTE: All directories must be referenced from the base (ex: C: or /home/),
+;       and have a termintion slash at the end (ex: /home/myfolder/zandronum/)
+
+; String: Location of the adminlist folder to generate files at
+directory_adminlist =
+
+; String: Location of the banlist folder to generate files at
+directory_banlist =
+
+; String: Location of the adminlist folder to generate files at
+directory_configs =
+
+; String: Location of the developer repository binaries
+directory_executable_developer =
+
+; String: Location of the iwads folder
+directory_iwads =
+
+; String: Location of the log folder to generate files at
+directory_logfiles =
+
+; String: Location of the wad directory for uploaded files to be used
+directory_wads =
+
+; String: Location of the whitelist folder to generate files at
+directory_whitelist =
+
+
+
+
+; NOTE: Binaries should be in runnable format (ex: ./binary_here)
+
+; String: Default zandronum executable name
+executable =
+
+; String: KPatch binary name
+executable_kpatch =
+
+; String: Developer binary name
+executable_developer =
