--- a/bestbot.ini
+++ b/bestbot.ini
@@ -39,3 +39,15 @@ whitelistdir =
 
 ; True or false, moderators, admins, and RCON users will get RCON regardless
 public_rcon = FALSE
+
+; Notice -- This will broadcast on every server every {notice_interval} seconds
+notice = Replace this text
+
+; Amount in seconds
+notice_interval = 3600
+
+; These wads will be loaded during server startup
+extra_wads = 
+
+; Not used at the moment, but will kill inactive servers every x seconds
+cleanup_interval =
